--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -481,10 +481,10 @@
   "shareParam0": "Título: Título do compartilhamento",
   "shareParam1": "Texto: Texto que explica o compartilhamento",
   "shareParam2": "URL: Link a ser compartilhado. Ex: uma url, vídeo, arquivo etc",
-  "replaceName": "Função de substituir",
-  "replaceDescription": "Função que retorna uma nova string substituído o texto passado.",
+  "replaceName": "Substituir",
+  "replaceDescription": "Função que retorna uma nova string substituído o texto passado",
   "textReplaceElement": "Texto original",
-  "textReplaceTargetRegexElement": "Um objeto RegExp ou literal. A correspondência ou correspondências são substituídas por newSubStr ou o valor retornado pela função especificada.",
+  "textReplaceTargetRegexElement": "Texto ou RegEx a ser substituido",
   "textReplaceReplacementElement": "Novo texto",
   "typeReplaceElement": "Tipo usando no regex."
 }
