--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1354,3 +1354,7 @@ convert=Convert
 convertValue=value
 convertTo=to
 convertDescription=Converts values between different types
+zipFile=Zip file
+functionToZipFile=Function to zip file
+fileList=File list
+fileNameToZip=Zip file name
