[QAIBT-1548] - Nova função para abrir url dentro de aplicação mobile

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -66,9 +66,10 @@
   "hour": "Hour",
   "minute": "Minute",
   "second": "Second",
+  "seconds": "Segundos",
   "callServerBlocklyAsync": "Call blockly server async",
   "functionToCallServerBlocklyAsync": "function to block server call async",
-  "classNameWithMethod": "Blockly name",
+  "classNameWithMethod": "Name of block function to be called",
   "callbackSuccess": "Callback success: callback function when success",
   "callbackError": "Callback error: callback function when error occurs",
   "params": "Parameters",
@@ -132,7 +133,7 @@
   "datasourceFilterName": "Filter",
   "datasourceFilterDescription": "Function that filter a datasource concat '/' and the path on parameter",
   "datasourceFilterParam0": "Datasource",
-  "datasourceFilterParam1": "Caminho",
+  "datasourceFilterParam1": "Path",
   "getParam": "Get param from query string",
   "functionToGetParam": "Function to get param from query string",
   "paramName": "Param name",
@@ -185,6 +186,7 @@
   "rootElement": "Root element",
   "newXMLElementName": "Create XML element",
   "newXMLElementDescription": "Function that create a XML element",
+  "newXMLEmptyWithRootDescription": "Function that creates XML with root element",
   "elementName": "Element name",
   "addXMLElementName": "Add XML element",
   "addXMLElementDescription": "Function that add a XML element inside a parent element",
@@ -465,9 +467,26 @@
   "socialLogin": "Social Login",
   "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Clean Login Data on Logoff",
-  "classNameWithMethod": "Name of block function to be called",
   "callbackFinish": "Function to be executed when execution is finished",
   "newline": "Newline",
   "newlineDescription": "Function that returns a newline '\\n'",
-  "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope"
+  "datasourceLoadName": "Load datasource",
+  "datasourceLoadDescription": "Function that loads the selected datasource",
+  "stopExecutionAfterScopeDestroyLabel": "Stop execution after changing scope",
+  "language": "Client Locale",
+  "languageDescription": "Function to returns client locale",
+  "share": "Share URL",
+  "shareDescription": "Function to call native share window from device or browser",
+  "shareParam0": "Title: Share title",
+  "shareParam1": "Text: Share text",
+  "shareParam2": "URL: Share URL. Ex: a url, video, file etc",
+  "replaceName": "Replace",
+  "replaceDescription": "Function that returns a new string replacing the past text.",
+  "textReplaceElement": "Original text",
+  "textReplaceTargetRegexElement": "A RegExp or Text ",
+  "textReplaceReplacementElement": "New Text",
+  "typeReplaceElement": "Type user to regex.",
+  "value": "Value",
+  "openInAppBrowser": "Open URL inside app",
+  "openInAppBrowserDescription": "Function that opens a URL inside the mobile app"
 }
