--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -68,7 +68,6 @@
   "second": "Segundo",
   "callServerBlocklyAsync": "Chamar bloco servidor assíncrono",
   "functionToCallServerBlocklyAsync": "Função para chamar bloco do servidor assíncrono",
-  "classNameWithMethod": "Nome do Bloco",
   "callbackSuccess": "Callback sucesso: função para callback quando for sucesso",
   "callbackError": "Callback erro: função para callback quando ocorrer erro",
   "params": "Parâmetros",
@@ -127,6 +126,7 @@
   "quantityRecordsDescription": "Função que retorna a quantidade total de registros da Fonte de dados",
   "quantityRecordsParam0": "Fonte de dados",
   "datasourcePostName": "Enviar",
+  "datasourcePostParam0": "Fonte de dados",
   "datasourcePostDescription": "Função que chama o método enviar da fonte de dados",
   "Fonte de dadosPostParam0": "Fonte de dados",
   "datasourceFilterName": "Filtrar",
@@ -453,7 +453,7 @@
   "CategoryType.JSON": "Json",
   "CategoryType.SOCIAL": "Social",
   "sociaLoginDescription":"Função que realiza o login a partir de uma determinada  rede social",
-  "socialNetwork":"Rede Social",
+  "socialNetwork":"Rede Social",  
   "getSelectedRowsGrid": "Obter Linhas Selecionadas da Grade",
   "functionToGetSelectedRowsGrid": "Função para obter linhas selecionadas de uma grade",
   "loadMoreName":"Carregar mais registros",
@@ -467,9 +467,26 @@
   "socialLogin": "Login por Redes Sociais",
   "socialLoginDescription": "Função que realiza o login por Redes Sociais(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Limpar Dados de Login ao Sair",
-  "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",
+  "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",  
   "callbackFinish": "Função que deverá ser executada, quando finalizar a execução",
   "newline": "Nova linha",
   "newlineDescription": "Função que retorna uma nova linha '\\n'",
-  "stopExecutionAfterScopeDestroyLabel": "Terminar execução após alterar o escopo"
+  "datasourceLoadName": "Carregar fonte de dados",
+  "datasourceLoadDescription": "Função que carrega a fonte de dados selecionada",
+  "stopExecutionAfterScopeDestroyLabel": "Terminar execução após alterar o escopo",
+  "language": "Idioma do Cliente",
+  "languageDescription": "Função que retorna o idioma utilizado no cliente",
+  "share": "Compartilhar URL",
+  "shareDescription": "Função que chama a tela nativa de compartilhamento do dispositivo ou navegador",
+  "shareParam0": "Título: Título do compartilhamento",
+  "shareParam1": "Texto: Texto que explica o compartilhamento",
+  "shareParam2": "URL: Link a ser compartilhado. Ex: uma url, vídeo, arquivo etc",
+  "replaceName": "Substituir",
+  "replaceDescription": "Função que retorna uma nova string substituído o texto passado",
+  "textReplaceElement": "Texto original",
+  "textReplaceTargetRegexElement": "Texto ou RegEx a ser substituido",
+  "textReplaceReplacementElement": "Novo texto",
+  "typeReplaceElement": "Tipo usando no regex.",
+  "openInAppBrowser": "Abrir URL dentro do app",
+  "openInAppBrowserDescription": "Função que abre uma URL dentro da aplicação mobile"
 }
