[QAIBT-1548] - Corrigindo erros de tradução

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -481,11 +481,11 @@
   "shareParam1": "Text: Share text",
   "shareParam2": "URL: Share URL. Ex: a url, video, file etc",
   "replaceName": "Replace",
-  "replaceDescription": "Function that returns a new string replacing the past text.",
+  "replaceDescription": "Function that returns a new string replacing the input text",
   "textReplaceElement": "Original text",
-  "textReplaceTargetRegexElement": "A RegExp or Text ",
+  "textReplaceTargetRegexElement": "A RegExp or Text",
   "textReplaceReplacementElement": "New Text",
-  "typeReplaceElement": "Type user to regex.",
+  "typeReplaceElement": "Type used to regex",
   "value": "Value",
   "openInAppBrowser": "Open URL inside app",
   "openInAppBrowserDescription": "Function that opens a URL inside the mobile app"
