[QAIBT-1548] - Corrigindo erro de tradução

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -133,7 +133,7 @@
   "datasourceFilterName": "Filter",
   "datasourceFilterDescription": "Function that filter a datasource concat '/' and the path on parameter",
   "datasourceFilterParam0": "Datasource",
-  "datasourceFilterParam1": "Way",
+  "datasourceFilterParam1": "Path",
   "getParam": "Get param from query string",
   "functionToGetParam": "Function to get param from query string",
   "paramName": "Param name",
