--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1359,3 +1359,7 @@ functionToZipFile=Função para compactar arquivo
 fileList=Lista de arquivos
 fileNameToZip=Nome do arquivo compactado
 optimisticLockingError=A linha não pode ser atualizada porque foi alterada ou excluída desde a última leitura. Por favor, insira a versão correta e tente novamente.
+datasourceExecuteNativeQuery=Abrir consulta nativa
+functionToExecuteNativeQuery=Função para realizar consultas no banco de dados de forma nativa
+datasourceExecuteNativeQueryUpdate=Abrir instrução SQL nativa
+functionToExecuteNativeQueryUpdate=Função para realizar atualizações no banco de dados de forma nativa
