Função do uso do certificado digital (#75)
* CRONAPP-1018
Função do uso do certificado digital

* CRONAPP-1018
Função do uso do certificado digital

--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1359,6 +1359,22 @@ functionToZipFile=Função para compactar arquivo
 fileList=Lista de arquivos
 fileNameToZip=Nome do arquivo compactado
 optimisticLockingError=A linha não pode ser atualizada porque foi alterada ou excluída desde a última leitura. Por favor, insira a versão correta e tente novamente.
+generateKeys=Gerar chaves
+generateKeysDescription=Gerar chaves publicas e privadas
+fileUrl=Url do arquivo
+loadPrivateKey=Carregar chave privada
+loadPrivateKeyDescription=Carrega chave privada do arquivo de chaves
+privateKeyFile=Arquivo da chave publica
+loadPublicKey=Carregar chave publica
+loadPublicKeyDescription=Carrega chave publica do arquivo de chaves
+publicKeyFile=Arquivo de chave publica
+signFile=Assinar arquivo
+signFileDescription=Assina arquivo para garantir a autenticidade
+privateKey=Chave privada
+verifySignature=Verificar assinatura
+verifySignatureDescription=Verifica a assinatura do arquivo assinado
+publicKey=Chave Pública
+signedObject=Objeto Assinado
 datasourceExecuteNativeQuery=Abrir consulta nativa
 functionToExecuteNativeQuery=Função para realizar consultas no banco de dados de forma nativa
 datasourceExecuteNativeQueryUpdate=Abrir instrução SQL nativa
