--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1364,6 +1364,22 @@ functionToZipFile=Function to zip file
 fileList=File list
 fileNameToZip=Zip file 
 optimisticLockingError=Cannot be updated because it has changed or been deleted since it was last read. Please, input the correct version and try again.
+generateKeys=Generate Keys
+generateKeysDescription=Generates public and private keys
+fileUrl=File Url
+loadPrivateKey=Load private key
+loadPrivateKeyDescription=Loads the private key value from file
+privateKeyFile=Private key file
+loadPublicKey=Load public key
+loadPublicKeyDescription=Loads the public key value from a file
+publicKeyFile=Public key file
+signFile=Sign file
+signFileDescription=Signs the file to guarantee the authenticity
+privateKey=Private Key
+verifySignature=Verify signature
+verifySignatureDescription=Verifies the signature of the file
+publicKey=Public Key
+signedObject=Signed Object
 datasourceExecuteNativeQuery=Open database native query
 functionToExecuteNativeQuery=Function to retrieve data from database using native query
 datasourceExecuteNativeQueryUpdate=Open database native query for update
