--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1384,3 +1384,6 @@ datasourceExecuteNativeQuery=Open database native query
 functionToExecuteNativeQuery=Function to retrieve data from database using native query
 datasourceExecuteNativeQueryUpdate=Open database native query for update
 functionToExecuteNativeQueryUpdate=Function to update data from database using native query
+textNormalizeFunction=Normalize
+textNormalizeDescription=Transforms the text allowing for easier sorting and searching of the text.
+nonNormalizedText=Non normalized text
