--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1387,3 +1387,7 @@ functionToExecuteNativeQueryUpdate=Function to update data from database using n
 textNormalizeFunction=Normalize
 textNormalizeDescription=Transforms the text allowing for easier sorting and searching of the text.
 nonNormalizedText=Non normalized text
+textStartsWithFunction=Text starts with
+textStartsWithDescription=Tests if the specified text starts with the specified prefix.
+textStarts=Text
+prefixStartsWith=Prefix
