--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1382,3 +1382,7 @@ functionToExecuteNativeQueryUpdate=Função para realizar atualizações no banc
 textNormalizeFunction=Normalizar
 textNormalizeDescription=Transforma o texto permitindo uma classificação e pesquisa mais fáceis do texto.
 nonNormalizedText=Texto não normalizado
+textStartsWithFunction=Texto começa com
+textStartsWithDescription=Verifica se o texto expecificado começa com o prefixo especificado.
+textStarts=Texto
+prefixStartsWith=Prefixo
