--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1386,3 +1386,4 @@ textStartsWithFunction=Texto começa com
 textStartsWithDescription=Verifica se o texto expecificado começa com o prefixo especificado.
 textStarts=Texto
 prefixStartsWith=Prefixo
+fieldpath=O campo não foi localizado na tabela
