[CRONAPP-1270] - Criação de bloco para o login

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -516,4 +516,6 @@
   "handleValueToPromise": "Handle value to promise",
   "functionToHandleValueToPromise": "Function to handle value to a promise object, you can resolve or reject the value",
   "promise": "Promise",
+  "createObjectLoginJson": "Create object Login",
+  "createObjectLoginJsonDescription": "Function that create an object Login from a text"
 }
