--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -319,6 +319,8 @@
   "openDatabase": "Criar banco de dados",
   "openDatabaseDescription": "Função para criar um banco de dados no dispositivo móvel. Caso não seja passado um nome , será criado com um nome default.",
   "executeSql": "Executar Comando SQL",
+  "executeMultipleSql": "Executar Múltiplos Comandos SQL",
+  "executeMultipleSqlDescription": "Executar Múltiplos Comandos SQL Seprados por Ponto e Vírgula (;)",
   "executeSqlDescription": "Função para executar comando SQL.",
   "text": "Texto",
   "arrayParams": "Lista de parâmetros",
@@ -430,12 +432,12 @@
   "getFirebaseToken": "Obter Token do Firebase",
   "getFirebaseTokenDescription": "Função que retorna o token do firebase para enviar notificações push",
   "dbName": "Nome do Banco",
-  "getUserToken":"Obter Token do Usuário",
-  "getUserTokenDesc":"Função que retonar o  Token do Usuário (X-AUTH-TOKEN)",
-  "getFirebaseNotificationData":"Obter Dados de notificações push",
-  "getFirebaseNotificationDataDesc":"Função que obtem os dados de push notification",
-  "changeContent":"Modificar conteúdo",
-  "changeContentDesc":"Função que altera o conteúdo pelo id, por exemplo, o conteúdo de um rótulo",
+  "getUserToken": "Obter Token do Usuário",
+  "getUserTokenDesc": "Função que retonar o  Token do Usuário (X-AUTH-TOKEN)",
+  "getFirebaseNotificationData": "Obter Dados de notificações push",
+  "getFirebaseNotificationDataDesc": "Função que obtem os dados de push notification",
+  "changeContent": "Modificar conteúdo",
+  "changeContentDesc": "Função que altera o conteúdo pelo id, por exemplo, o conteúdo de um rótulo",
   "firstRecordName": "Ir para Primeiro Registro",
   "firstRecordDescription": "Função que põe o cursor no primeiro registro da Fonte de dados",
   "firstRecordParam0": "Fonte de dados",
@@ -452,14 +454,14 @@
   "json": "Json",
   "CategoryType.JSON": "Json",
   "CategoryType.SOCIAL": "Social",
-  "sociaLoginDescription":"Função que realiza o login a partir de uma determinada  rede social",
-  "socialNetwork":"Rede Social",  
+  "sociaLoginDescription": "Função que realiza o login a partir de uma determinada  rede social",
+  "socialNetwork": "Rede Social",
   "getSelectedRowsGrid": "Obter Linhas Selecionadas da Grade",
   "functionToGetSelectedRowsGrid": "Função para obter linhas selecionadas de uma grade",
-  "loadMoreName":"Carregar mais registros",
-  "loadMoreNameDescription":"Função que chama a próxima página de registros do datasource",
-  "hasNextPageName":"Existem mais registros?",
-  "hasNextPageDescription":"Função que retorna se existem mais itens a serem carregados pela fonte de dados",
+  "loadMoreName": "Carregar mais registros",
+  "loadMoreNameDescription": "Função que chama a próxima página de registros do datasource",
+  "hasNextPageName": "Existem mais registros?",
+  "hasNextPageDescription": "Função que retorna se existem mais itens a serem carregados pela fonte de dados",
   "compile": "Compilar?",
   "updateDate": "Alterar data",
   "functionToUpdateDate": "Função para alterar data",
@@ -467,7 +469,7 @@
   "socialLogin": "Login por Redes Sociais",
   "socialLoginDescription": "Função que realiza o login por Redes Sociais(Facebook/Github|Google|Linkedin)",
   "clearCacheBeforeOpen": "Limpar Dados de Login ao Sair",
-  "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",  
+  "classNameWithMethod": "Nome da função do bloco que deverá ser chamada",
   "callbackFinish": "Função que deverá ser executada, quando finalizar a execução",
   "newline": "Nova linha",
   "newlineDescription": "Função que retorna uma nova linha '\\n'",
