--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -319,8 +319,8 @@
   "openDatabase": "Create Database",
   "openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
   "executeSql": "Run Command SQL",
-  "executeMultipleSql": "Executar Múltiplos Comandos SQL",
-  "executeMultipleSqlDescription": "Executar Múltiplos Comandos SQL Seprados por Ponto e Vírgula (;)",
+  "executeMultipleSql": "Execute multiple SQL commands",
+  "executeMultipleSqlDescription": "Execute multiple SQL comands splitted by (;)",
   "executeSqlDescription": "Function to execute command SQL.",
   "text": "Text",
   "arrayParams": "List of parameters",
