--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -501,5 +501,7 @@
   "changeTitleScreen": "Change form title",
   "functionToChangeTitleScreen": "Function to change the title of the form",
   "getApplicationName": "Get application name",
-  "functionToGetApplicationName": "Function to obtain application name"
+  "functionToGetApplicationName": "Function to obtain application name",
+  "back": "Back to previous Form",
+  "backDescription": "Returns to previously opened Form"
 }
