CRONAPP-1404 - Novas funções de arquivo e cabeçalho de requisição (#95)
* Suporte a propriedades do sistema no cliente http

* CRONAPP-1345 - Consultas jpql do tipo “select c, c.nome from Entidade c” estava vindo bagunçado. Esse tipo de consulta deve sempre expandir o “c”

* CRONAPP-1345 - Suporte a expressão data.<campo> em eventos e campos calculados das fontes

* CRONAPP-1345 - Novas funções de arquivo e cabeçalho de requisiçao

* CRONAPP-1345 - Correções diversas na IDE e Frameworks

* CRONAPP-1345 - Suporte a cache de classes em Modo Debug

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1392,3 +1392,16 @@ textStartsWithDescription=Tests if the specified text starts with the specified 
 textStarts=Text
 prefixStartsWith=Prefix
 fieldpath=The field was not found in the table.
+getHeader=Get param from request
+getHeaderDescription=Function to get param from request
+getToken=Get token from request
+getTokenDescription=Function to get token from request
+getFileName=Get file name
+getFileNameDescription=Get file name of a given path
+getFileParent=Get parent folder
+getFileParentDescription=Get a parent folder of a given file
+fileName=File Name
+getFileExtension=Get File Extension
+getFileExtensionDescription=Get file extension of a given file
+toFile=Get file name path
+toFileDescription=Get a new File path from a parent pathname and a child pathname string. Ex: /opt/test, file.txt
