--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1387,3 +1387,16 @@ textStartsWithDescription=Verifica se o texto expecificado começa com o prefixo
 textStarts=Texto
 prefixStartsWith=Prefixo
 fieldpath=O campo não foi localizado na tabela
+getHeader=Obter cabeçalho da requisição
+getHeaderDescription=Função para obter o cabeçalho da requisição corrente
+getToken=Obter token da requisição
+getTokenDescription=Função para obter token da requisição
+getFileName=Obter nome do arquivo
+getFileNameDescription=Obtém o nome do arquivo de um caminho
+getFileParent=Obter pasta pai
+getFileParentDescription=Obtém a pasta de um arquivo
+fileName=Nome do Arquivo
+getFileExtension=Obter Extensão do Arquivo
+getFileExtensionDescription=Obtém extensão de um arquivo
+toFile=Obter caminho de arquivo
+toFileDescription=Obtém o texto de um novo caminho de arquivo baseado em uma pasta e um nome. Obs: essa função apenas monta a string do caminho, ela não o cria. Ex: /opt/test, file.txt
