develop para master (#66)
* CRONAPP-168 - Ajuste do modal para seguir hierarquia sequencial das tags (H1.h2..)

* CRONAPP-168 - Adicionando focus ao primeiro input em um modal e ao fechar modal focar novamente no item que disparou a ação, criada função para setar focus no primeiro input do form quando estiver em modo de edição/inserção

* CRONAPP-1104 - Suporte a download de tipos texto (#49)

* CRONAPP-1131 - Bloco "desabilitar componente" não está funcionando

* CRONAPP-1015 Função para obter url do servidor

* CRONAPP-1168 - Blocos habilitar e desabilitar componente apresentando erro no console

* CRONAPP-1168 - Blocos habilitar e desabilitar componente apresentando erro no console

* CRONAPP-1168 - Blocos habilitar e desabilitar componente apresentando erro no console

* CRONAPP-1168 - Blocos habilitar e desabilitar componente apresentando erro no console

* CRONAPP-1168 - Blocos habilitar e desabilitar componente apresentando erro no console

* [CRONAPP-1185] [CRONAPP-1157] Ignore 'Scan already in progress error message' (double click issue)

* :sparkles: New Release 2.2.12

* [CRONAPP-1203] - quando o campo não retornar a formatação do arquivo não irá mostrar

* [CRONAPP-1203] - fazendo o gulp

* [CRONAPP-1231] :bug: :wheelchair: Camera container added tab behavior

* gulp

* Ajuste do focus (retorno) no botão da grade após clicar Salvar no modal

* Colocando o showmodal para focar no primeiro campo visivel, corrigido bug qdo n existir o lastfocused

* [CRONAPP-1292] :bug: Changed OpenDatabase Method in order to use native sqlite (#59)

* [CRONAPP-1292] Verify if sqlitePLugin is present, if so use it or use the browser WebSQL

* [CRONAPP-1292] Gulp

* Feature/poc funcoes urgen (#61)

* Adicionado funções de verificaçao para modo de insercao/edicao, alterar titulo da pagina e obter nome do sistema

* [CRONAPP-1292] Gulp

* [CRONAPP-1292] :bug: missing window reference.

* [CRONAPP-1292] Changed translation SQL f

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -66,7 +66,7 @@
   "hour": "Hour",
   "minute": "Minute",
   "second": "Second",
-  "seconds": "Segundos",
+  "seconds": "Seconds",
   "callServerBlocklyAsync": "Call blockly server async",
   "functionToCallServerBlocklyAsync": "function to block server call async",
   "classNameWithMethod": "Name of block function to be called",
@@ -319,6 +319,8 @@
   "openDatabase": "Create Database",
   "openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
   "executeSql": "Run Command SQL",
+  "executeMultipleSql": "Execute multiple SQL commands",
+  "executeMultipleSqlDescription": "Execute multiple SQL comands splitted by (;)",
   "executeSqlDescription": "Function to execute command SQL.",
   "text": "Text",
   "arrayParams": "List of parameters",
@@ -488,5 +490,18 @@
   "typeReplaceElement": "Type used to regex",
   "value": "Value",
   "openInAppBrowser": "Open URL inside app",
-  "openInAppBrowserDescription": "Function that opens a URL inside the mobile app"
+  "openInAppBrowserDescription": "Function that opens a URL inside the mobile app",
+  "getBaseUrlName": "Get Base Url",
+  "getBaseUrlDescription": "Function to get server's base url",
+  "isInsertingMode": "Is the form in insertion mode?",
+  "functionToIsInsertingMode": "Function to check if the insertion mode form is",
+  "isEditingMode": "Is the form in edit mode?",
+  "functionToIsEditingMode": "Function to check if the form is in edit mode",
+  "title": "title",
+  "changeTitleScreen": "Change form title",
+  "functionToChangeTitleScreen": "Function to change the title of the form",
+  "getApplicationName": "Get application name",
+  "functionToGetApplicationName": "Function to obtain application name",
+  "back": "Back to previous Form",
+  "backDescription": "Returns to previously opened Form"
 }
