--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -991,6 +991,7 @@ CategoryType.TREE=Árvore
 CategoryType.JSONORMAP=Json e Mapa
 CategoryType.SCREEN=Formulário
 CategoryType.OBJECT=Objeto
+CategoryType.REGEX=Expressão Regular
 functionToExecuteQuery=Função para executar comando JPQL
 DATASOURCE_INVALID_QUERY=Instrução JPQL inválida: {0}
 accessDenied=Acesso Negado
@@ -1400,3 +1401,12 @@ getFileExtension=Obter Extensão do Arquivo
 getFileExtensionDescription=Obtém extensão de um arquivo
 toFile=Obter caminho de arquivo
 toFileDescription=Obtém o texto de um novo caminho de arquivo baseado em uma pasta e um nome. Obs: essa função apenas monta a string do caminho, ela não o cria. Ex: /opt/test, file.txt
+text=Texto
+regex=Expressão Regular
+flag=Flag
+flags=Flags
+flagRegexError=Flag inválida
+extractTextWithRegex=Extrair texto com Exp. Regular
+extractTextWithRegexDescription=Função para extrair texto com Exp. Regular. Retorna uma lista com as incidências, caso enconte
+validateTextWithRegex=Validar texto com Exp. Regular
+validateTextWithRegexDescription=Função que valida texto com Exp. Regular. Retorna verdadeiro caso encontre ou falso caso não encontre o texto
