--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -66,7 +66,7 @@
   "hour": "Hour",
   "minute": "Minute",
   "second": "Second",
-  "seconds": "Segundos",
+  "seconds": "Seconds",
   "callServerBlocklyAsync": "Call blockly server async",
   "functionToCallServerBlocklyAsync": "function to block server call async",
   "classNameWithMethod": "Name of block function to be called",
@@ -488,5 +488,10 @@
   "typeReplaceElement": "Type used to regex",
   "value": "Value",
   "openInAppBrowser": "Open URL inside app",
-  "openInAppBrowserDescription": "Function that opens a URL inside the mobile app"
+  "openInAppBrowserDescription": "Function that opens a URL inside the mobile app",
+  "createPromiseName": "Create Promise",
+  "functioncreatePromise": "Function to create a promise object",
+  "handleValueToPromise": "Handle value to promise",
+  "functionToHandleValueToPromise": "Function to handle value to a promise object, you can resolve or reject the value",
+  "promise": "Promise"
 }
