--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -997,6 +997,7 @@ CategoryType.JSONORMAP=Json and Map
 CategoryType.SCREEN=Form
 CategoryType.OBJECT=Object
 CategoryType.REGEX=Regular Expression
+CategoryType.VALIDATION=Validate
 functionToExecuteQuery=Function excute query JPQL 
 DATASOURCE_INVALID_QUERY=JPQL instruction was invalid: {0}
 accessDenied=Access Denied
@@ -1414,4 +1415,13 @@ flagRegexError=Invalid flag
 extractTextWithRegex=Extract text with Reg. Expression
 extractTextWithRegexDescription=Function to extract text with Reg. Expression. Returns a list with incidences, if found
 validateTextWithRegex=Validate text with Reg. Expression
-validateTextWithRegexDescription=Function to validate text with Reg. Expression. Returns a list with incidences, if found
+validateTextWithRegexDescription=Function to validate text with Reg. Expression. Returns true if it finds or false if it doesn't find the text
+validateCPF=Validate CPF
+validateCPFDescription=Function to validate CPF. Returns true if the CPF is valid or false if it is invalid.
+cpf=CPF
+validateCNPJ=Validate CNPJ
+validateCNPJDescription=Function to validate CNPJ.Returns true if the CPNJ is valid or false if it is invalid.
+cnpj=CNPJ
+validateEmail=Validate e-mail
+validateEmailDescription=Function to validate e-mail.Returns true if the e-mail is valid or false if it is invalid.
+email=E-mail
