--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -992,6 +992,7 @@ CategoryType.JSONORMAP=Json e Mapa
 CategoryType.SCREEN=Formulário
 CategoryType.OBJECT=Objeto
 CategoryType.REGEX=Expressão Regular
+CategoryType.VALIDATION=Validação
 functionToExecuteQuery=Função para executar comando JPQL
 DATASOURCE_INVALID_QUERY=Instrução JPQL inválida: {0}
 accessDenied=Acesso Negado
@@ -1410,3 +1411,12 @@ extractTextWithRegex=Extrair texto com Exp. Regular
 extractTextWithRegexDescription=Função para extrair texto com Exp. Regular. Retorna uma lista com as incidências, caso enconte
 validateTextWithRegex=Validar texto com Exp. Regular
 validateTextWithRegexDescription=Função que valida texto com Exp. Regular. Retorna verdadeiro caso encontre ou falso caso não encontre o texto
+validateCPF=Validar CPF
+validateCPFDescription=Função para validar CPF. Retorna verdadeiro se o CPF for válido ou falso caso seja inválido.
+cpf=CPF
+validateCNPJ=Validar CNPJ
+validateCNPJDescription=Função para validar CNPJ. Retorna verdadeiro se o CPNJ for válido ou falso caso seja inválido.
+cnpj=CNPJ
+validateEmail=Validar e-mail
+validateEmailDescription=Função para validar e-mail. Retorna verdadeiro se o e-mail for válido ou falso caso seja inválido.
+email=E-mail
