[CRONAPP-1625] Fixed translation and removed unnecessary function argument

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -52,6 +52,7 @@
   "changeView": "Change view",
   "chatAttachmentCarousel": "Carousel",
   "chatAttachmentLayout": "Chat Attachment Layout",
+  "chatAttachmentLayoutDesc":"Attachment Layout",
   "chatAttachmentList": "List",
   "chatAttachmentObj": "Chat Attachment Object",
   "chatAttachmentObjDesc": "This blockly represents an Attachment Object",
