--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -52,6 +52,7 @@
   "changeView": "Mudar formulário",
   "chatAttachmentCarousel": "Carrossel",
   "chatAttachmentLayout": "Layout de Anexo",
+  "chatAttachmentLayoutDesc":"Layout do Anexo",
   "chatAttachmentList": "Lista",
   "chatAttachmentObj": "Anexo",
   "chatAttachmentObjDesc": "Este bloco representa anexo do chat",
