[CRONAPP-2171] Added statement for waiting chat rendering

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -57,6 +57,7 @@
   "chatAttachmentObj": "Chat Attachment Object",
   "chatAttachmentObjDesc": "This blockly represents an Attachment Object",
   "chatAttachments": "Chat Attachments",
+  "chatElementNotPresent": "The chat component is not present on page.",
   "chatMessage": "Text Message",
   "chatSuggestedActionObj": "Chat Suggested Action Object",
   "chatSuggestedActionObjDesc": "This blockly represents a Suggested Action",
@@ -444,6 +445,8 @@
   "renameElementName": "Rename element",
   "renderChatAttachments": "Render Chat Attachments",
   "renderChatAttachmentsDesc": "Renders an attachment card inside the Chat.",
+  "renderChatHtml": "Render Chat Html Contents",
+  "renderChatHtmlDesc":"Renders an Html content inside the Chat.",
   "renderChatMessage": "Render Chat Message",
   "renderChatMessageDesc": "Renders a message bubble inside the Chat.",
   "renderChatSuggestedActions": "Render Chat Suggested Actions",
