--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -57,6 +57,7 @@
   "chatAttachmentObj": "Anexo",
   "chatAttachmentObjDesc": "Este bloco representa anexo do chat",
   "chatAttachments": "Anexos do Chat",
+  "chatElementNotPresent": "O componente de chat não está presente na página.",
   "chatMessage": "Mensagem de Texto",
   "chatSuggestedActionObj": "Sugestão de Ação do Chat",
   "chatSuggestedActionObjDesc": "Este bloco representa uma Sugestão de Ação do Chat",
@@ -445,6 +446,8 @@
   "renameElementName": "Renomeia elemento",
   "renderChatAttachments": "Renderizar Anexo",
   "renderChatAttachmentsDesc": "Renderiza um card como anexo dentro do widget de Chat.",
+  "renderChatHtml": "Renderizar Html",
+  "renderChatHtmlDesc":"Renderiza um conteúdo Html dentro do widget de Chat.",
   "renderChatMessage": "Renderizar Mensagem",
   "renderChatMessageDesc": "Renderiza um balão de mensagem dentro do bate-papo.",
   "renderChatSuggestedActions": "Renderizar Ações Sugeridas",
