CRONAPP-2133 [OXITENO] Executar procedures de forma low-code

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1425,3 +1425,9 @@ cnpj=CNPJ
 validateEmail=Validate e-mail
 validateEmailDescription=Function to validate e-mail.Returns true if the e-mail is valid or false if it is invalid.
 email=E-mail
+executeProcedureReturnTable=Execute procedure returning data
+executeProcedureReturnTableDescription=Run a procedure that returns a list of data
+namespace=Namespace
+procedureName=Procedure name
+parameterList=Parameter list
+returnClass=Return class
