--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1420,3 +1420,9 @@ cnpj=CNPJ
 validateEmail=Validar e-mail
 validateEmailDescription=Função para validar e-mail. Retorna verdadeiro se o e-mail for válido ou falso caso seja inválido.
 email=E-mail
+executeProcedureReturnTable=Executar procedimento retornando dados
+executeProcedureReturnTableDescription=Executar uma procedure que retorne uma lista de dados
+namespace=Namespace
+procedureName=Nome do procedimento
+parameterList=Lista de paramêtros
+returnClass=Classe de retorno
