--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -564,5 +564,8 @@
   "XMLHasRootElementDescription": "Função que verifica se existe elemento raiz no documento XML",
   "XMLHasRootElementName": "Existe elemento raiz?",
   "year": "Ano",
-  "yearsToIncrement": "Anos a incrementar"
+  "yearsToIncrement": "Anos a incrementar",
+  "sleep": "Dormir",
+  "sleepDescription": "Interrompe a execução do bloco pelo intervalo informado",
+  "sleepInterval": "Intervalo em milisegundos"
 }
