--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1425,3 +1425,14 @@ cnpj=CNPJ
 validateEmail=Validate e-mail
 validateEmailDescription=Function to validate e-mail.Returns true if the e-mail is valid or false if it is invalid.
 email=E-mail
+executeProcedureReturnTable=Execute procedure returning data
+executeProcedureReturnTableDescription=Run a procedure that returns a list of data
+namespace=Namespace
+procedureName=Procedure name
+parameterList=Parameter list
+returnClass=Return class
+parameterMap=Parameter Map
+paramteterListTypes=List of parameter types
+paramteterListModes=List of modes types
+executeProcedureWithInOut=Execute procedure with IN and/or OUT
+executeProcedureWithInOutDescription=Run a procedure that contains IN and/or OUT parameters 
