--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -589,7 +589,7 @@ MathEFunctionName=Return the constant E
 MATHPOWBASE=Base
 MATHPOWDESCRIPTION=A number representing the given base taken to the power of the given exponent.
 MATHPOWEXPONENT=Exponent
-MATHTHEPOW=Function Pow
+MATHTHEPOW=Raise power
 MD5OfFile=MD5 from file
 MD5OfVar=MD5 from string
 MD5OfVarParam0=String or bytes
