--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -584,8 +584,8 @@ MathEFunctionDescription=Função que retorna a constante E
 MathEFunctionName=Retorna a constante E
 MATHPOWBASE=Base
 MATHPOWDESCRIPTION=Função que retorna a base elevada ao expoente
-MATHPOWEXPONENT=Exponente
-MATHTHEPOW=Função Potência
+MATHPOWEXPONENT=Expoente
+MATHTHEPOW=Elevar à potência
 MD5OfFile=MD5 do arquivo
 MD5OfVar=MD5 de uma string
 MD5OfVarParam0=String ou bytes
