--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -18,6 +18,8 @@
   "back": "Voltar para Formulário Anterior",
   "backDescription": "Volta para formulário aberto anteriormente",
   "blocklyWithFunction": "Nome do Bloco",
+  "Calendar":"Calendário",
+  "calendarView":"Visão do calendário",
   "callbackBlocklyError": "Callback erro: nome do bloco (completo) para ser chamado quando obter a resposta do servidor com erro",
   "callbackBlocklySuccess": "Callback sucesso: nome do bloco (completo) para ser chamado quando obter a resposta do servidor com sucesso",
   "callbackError": "Callback erro: função para callback quando ocorrer erro",
@@ -42,6 +44,7 @@
   "Cell3GConnection": "Conexão celular 3G",
   "Cell4GConnection": "Conexão celular 4G",
   "CellGenericConnection": "Conexão celular genérico",
+  "century":"Século",
   "CEP": "CEP",
   "changeAttrValueDesc": "Função que define o valor do atributo de um elemento",
   "changeAttrValueName": "Definir valor do atributo",
@@ -147,6 +150,7 @@
   "day": "Dia",
   "daysToIncrement": "Dias a incrementar",
   "dbName": "Nome do Banco",
+  "decade":"Década",
   "deleteProperty": "Deletar propriedade",
   "deletePropertyDescription": "Função que deleta uma propriedade de um objeto/json.",
   "destinationType": "Tipo de destino",
@@ -249,6 +253,14 @@
   "getAttributeValueName": "Obtém valor do atributo",
   "getBaseUrlDescription": "Função para obter url base do servidor",
   "getBaseUrlName": "Obter Url Base",
+  "getCalendarMax":"Obter data máxima",
+  "getCalendarMaxDesc":"Obtém a data máxima do calendário.",
+  "getCalendarMin":"Obter data mínima",
+  "getCalendarMinDesc":"Obtém a data mínima do calendário.",
+  "getCalendarSelectDates":"Obter datas selecionadas",
+  "getCalendarSelectDatesDesc":"Obtém a lista de datas selecionadas do calendário. (Disponível apenas caso o modo de seleção do calendário esteja definido para 'Múltipla')",
+  "getCalendarValue":"Obter data atual",
+  "getCalendarValueDesc":"Obtém o valor da seleção única atual do calendário.",
   "getCEPDescription": "Função para buscar os dados do CEP",
   "getCEPName": "Buscar CEP",
   "getChatUser": "Obter Usuário do Chat",
@@ -380,6 +392,8 @@
   "month": "Mês",
   "monthsToIncrement": "Meses a incrementar",
   "name": "Nome",
+  "navigateCalendarTo":"Navegar no calendário",
+  "navigateCalendarToDesc":"Muda a visão atual do calendário para o valor definido.",
   "newDate": "Nova data",
   "newline": "Nova linha",
   "newlineDescription": "Função que retorna uma nova linha '\\n'",
@@ -479,6 +493,14 @@
   "setActiveTablDesc": "Função que modifica a aba ativa do componente aba",
   "setAttributeDescription": "Função que atribui um valor ao atributo",
   "setAttributeName": "Define valor do atributo",
+  "setCalendarMax":"Definir data máxima",
+  "setCalendarMaxDesc":"Define a data máxima do calendário.",
+  "setCalendarMin":"Definir data mínima",
+  "setCalendarMinDesc":"Define a data mínima do calendário.",
+  "setCalendarSelectDates":"Selecionar datas",
+  "setCalendarSelectDatesDesc":"Seleciona uma lista de datas do calendário. (Disponível apenas caso o modo de seleção do calendário esteja definido para 'Múltipla')",
+  "setCalendarValue":"Definir data atual",
+  "setCalendarValueDesc":"Define o valor da seleção única atual do calendário.",
   "setElementValueDescription": "Função que define o conteúdo de um elemento",
   "setElementValueName": "Definir conteúdo do elemento",
   "setLocalStorage": "Adicionar Item na Sessão do navegador",
@@ -502,6 +524,9 @@
   "showMobileModalDesc": "Função que exibe um modal em dispositivos mobile",
   "showModal": "Exibir modal",
   "showModalDesc": "Função que exibe um modal",
+  "sleep": "Dormir",
+  "sleepDescription": "Interrompe a execução do bloco pelo intervalo informado",
+  "sleepInterval": "Intervalo em milisegundos",
   "smallerDateToBeSubtracted": "Menor data a ser subtraida",
   "socialLogin": "Login por Redes Sociais",
   "socialLoginDescription": "Função que realiza o login por Redes Sociais(Facebook/Github|Google|Linkedin)",
@@ -564,8 +589,5 @@
   "XMLHasRootElementDescription": "Função que verifica se existe elemento raiz no documento XML",
   "XMLHasRootElementName": "Existe elemento raiz?",
   "year": "Ano",
-  "yearsToIncrement": "Anos a incrementar",
-  "sleep": "Dormir",
-  "sleepDescription": "Interrompe a execução do bloco pelo intervalo informado",
-  "sleepInterval": "Intervalo em milisegundos"
+  "yearsToIncrement": "Anos a incrementar"
 }
